@@ -85,11 +85,6 @@
 ; Install e.g. with Homebrew: brew install gnu-units
 ;UNITS_EXE = /usr/local/bin/gunits
 
-; Needed for inlined SVG and MathM, but conflicts with document.write().
-; Experimental. Default: false.
-; See http://hixie.ch/advocacy/xhtml
-;ENABLE_XHTML_XML = true
-
 ; Needed for FacebookLike plugin
 ;ENABLE_OPEN_GRAPH = true
 
