@@ -128,7 +128,7 @@ function IniConfig($file)
     // List of all valid config options to be define()d which take booleans.
     $_IC_VALID_BOOL = array
     ('ENABLE_PAGEPERM', 'ENABLE_EDIT_TOOLBAR', 'JS_SEARCHREPLACE',
-        'ENABLE_XHTML_XML', 'ENABLE_DOUBLECLICKEDIT',
+        'ENABLE_DOUBLECLICKEDIT',
         'USECACHE', 'WIKIDB_NOCACHE_MARKUP',
         'ENABLE_REVERSE_DNS', 'ENCRYPTED_PASSWD', 'ZIPDUMP_AUTH',
         'ENABLE_RAW_HTML', 'ENABLE_RAW_HTML_LOCKEDONLY', 'ENABLE_RAW_HTML_SAFE',
